# sdk-nrf

./: .gitignore  CODEOWNERS  west.yml
.github/: labeler.yml
.github/workflows/: new_manifest.yml
applications/matter_weather_station/: thingy53_nrf5340_cpuapp.overlay
cmake/: GitUtils.cmake  external_child_image.cmake
doc/: CMakeLists.txt
doc/_static/css/: common.css  itl_car_pod.css  itl_lib.css  itl_mat_pod.css  itl_tfl.css
doc/_templates/: [doc_set].doxyfile.in  conf.py  index.rst
doc/_themes/sphinx_itl_theme/: footer.html
doc/_utils/: utils.py
doc/itl_car_pod/: conf.py
doc/itl_lib/: conf.py
doc/itl_mat_pod/: conf.py
doc/itl_tfl/: conf.py
doc/kconfig/: conf.py
doc/matter/: conf.py
doc/mcuboot/: conf.py
doc/nrf/: conf.py
doc/nrfx/: conf.py
doc/nrfxlib/: conf.py
doc/tfm/: conf.py
doc/zephyr/: conf.py
include/: dfu_target_uart_host.h  event_manager.h  lte_uart_dfu.h
include/bluetooth/: scan.h
include/dfu/: dfu_target.h  dfu_target_uart.h
include/modem/: at_cmd.h
lib/: CMakeLists.txt  Kconfig
lib/at_host/: Kconfig  at_host.c
lib/date_time/: date_time_core.c
lib/dfu_target_uart_host/: CMakeLists.txt  Kconfig  dfu_target_uart_host.c
lib/lte_link_control/: lte_lc.c
lib/lte_uart_dfu/: CMakeLists.txt  Kconfig  lte_uart_dfu.c
lib/nrf_modem_lib/: Kconfig
samples/bootloader/boards/: itlm5_nrf5340_cpuapp_minimal.conf
samples/dfu/nrf5340/: CMakeLists.txt  Kconfig  prj.conf
samples/dfu/nrf5340/boards/: nrf5340dk_cpuapp_ns.conf
samples/dfu/nrf5340/src/: main.c
samples/dfu/nrf9160/: CMakeLists.txt  prj.conf
samples/dfu/nrf9160/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
samples/dfu/nrf9160/src/: main.c
samples/matter/template/src/: template.zap
samples/spm/: prj.conf  prj_minimal.conf
samples/zigbee/ncp/boards/: nrf5340dk_nrf5340_cpuapp_usb.conf
scripts/ci/: new_manifest_version.sh  sendManifestMessageToDevChannel.main.kts
scripts/west_commands/: ncs_commands.py
subsys/app_event_manager/: app_event_manager.c
subsys/bluetooth/: scan.c
subsys/dfu/dfu_target/: CMakeLists.txt  Kconfig
subsys/dfu/dfu_target/src/: dfu_target.c  dfu_target_uart.c
subsys/dfu/dfu_target/src/dfu_target_uart_cddl/: CMakeLists.txt  dfu_target_uart.cddl
subsys/event_manager/: Kconfig  event_manager.c  event_manager_priv.h  pm.events.yml
subsys/net/lib/fota_download/src/: fota_download.c
subsys/partition_manager/: CMakeLists.txt  Kconfig  pm.yml.file_system
subsys/shell/: shell_bt_nus.c
subsys/spm/: Kconfig
